cfn_benchmark/cfn_templates/aws-samples__genai-secure-networking-arch-patterns/hub-spoke-private-link/cloudformation/consumerResources.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC Endpoint in a public subnet'

Parameters:
  VPCCidr:
    Type: String
    Default: 10.1.0.0/16
    Description: CIDR block for the VPC
  PublicSubnet1CIDR:
    Type: String
    Default: "10.1.1.0/24"
  PublicSubnet2CIDR:
    Type: String
    Default: "10.1.2.0/24"
  PrivateSubnet1CIDR:
    Type: String
    Default: "10.1.3.0/24"
  PrivateSubnet2CIDR:
    Type: String
    Default: "10.1.4.0/24"
  VPCEndpointServiceId:
    Type: String
    Description: 'ID of the VPC Endpoint Service to connect to'

Resources:
## VPC Resources ##
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: MyVPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PublicSubnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PublicSubnet2

  # PrivateSubnet1:
  #   Type: AWS::EC2::Subnet
  #   Properties:
  #     VpcId: !Ref VPC
  #     AvailabilityZone: !Select [0, !GetAZs '']
  #     CidrBlock: !Ref PrivateSubnet1CIDR
  #     MapPublicIpOnLaunch: false
  #     Tags:
  #       - Key: Name
  #         Value: PrivateSubnet1

  # PrivateSubnet2:
  #   Type: AWS::EC2::Subnet
  #   Properties:
  #     VpcId: !Ref VPC
  #     AvailabilityZone: !Select [1, !GetAZs '']
  #     CidrBlock: !Ref PrivateSubnet2CIDR
  #     MapPublicIpOnLaunch: false
  #     Tags:
  #       - Key: Name
  #         Value: PrivateSubnet2

  RouteTablePublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'Public Subnet RT'

  RouteTableAssociation1Public:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTablePublic

  RouteTableAssociation2Public:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTablePublic

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

## VPC Endpoint Resources ##
  VPCEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Security group for VPC Endpoint'
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCCidr
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref VPCCidr

  VPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Join ['', ['com.amazonaws.vpce.', !Ref 'AWS::Region', '.', !Ref 'VPCEndpointServiceId']]
      VpcId: !Ref 'VPC'
      VpcEndpointType: 'Interface'
      SecurityGroupIds:
        - !Ref 'VPCEndpointSecurityGroup'
      SubnetIds:
        # - !Ref PrivateSubnet1
        # - !Ref PrivateSubnet2
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

Outputs:

  VPCEndpointId:
    Description: 'ID of the VPC Endpoint'
    Value: !Ref 'VPCEndpoint'

  VPCEndpointDNSEntries:
    Description: 'DNS Entries for the VPC Endpoint'
    Value: !Join [',', !GetAtt 'VPCEndpoint.DnsEntries']

  AppEndpoint:
    Description: "Endpoint to Connect to LLM Proxy Application"
    Value: !Sub
      - 'http://${Endpoint}'
      - Endpoint: !Select [1, !Split [":", !Select [0, !GetAtt 'VPCEndpoint.DnsEntries']]]
