cfn_benchmark/cfn_templates/aws-samples__genai-secure-networking-arch-patterns/hub-spoke-private-link/cloudformation/tenantResources.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC Endpoint in a public subnet'

Parameters:
  HubAccountId:
    Type: String
    Description: The AWS Account ID that should be allowed to assume the cross-account role
  LLMProxyCrossAccountRoleName:
    Type: String
    Description: The name of the cross-account role to create for use by LLM Proxy
    Default: LLMProxyCrossAcctRole
  LatestAmiID:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  VPCCidr:
    Type: String
    Default: 10.1.0.0/16
    Description: CIDR block for the VPC
  PublicSubnet1CIDR:
    Type: String
    Default: "10.1.1.0/24"
  PublicSubnet2CIDR:
    Type: String
    Default: "10.1.2.0/24"
  PrivateSubnet1CIDR:
    Type: String
    Default: "10.1.3.0/24"
  PrivateSubnet2CIDR:
    Type: String
    Default: "10.1.4.0/24"
  VPCEndpointServiceId:
    Type: String
    Description: 'ID of the VPC Endpoint Service to connect to'
  SupportedAZs:
    Type: String
    Description: Comma-separated list of supported Availability Zones
  AvailabilityZoneIds:
    Type: CommaDelimitedList
    Default: "use1-az2,use1-az4"
    Description: Must match Hub stack AZs

Resources:
## LLM Proxy Cross Account Role Resources ##
  CrossAccountRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Ref LLMProxyCrossAccountRoleName
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              AWS:
                !Sub 'arn:aws:iam::${HubAccountId}:root'
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - !Ref CrossAccountRolePolicy

  CrossAccountRolePolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - 'bedrock:InvokeModel'
              - 'bedrock:InvokeModelWithResponseStream'
            Resource: !Sub "arn:aws:bedrock:*::foundation-model/*"

## VPC Resources ##
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: MyVPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZoneId: !Select [0, !Ref AvailabilityZoneIds]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PublicSubnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZoneId: !Select [1, !Ref AvailabilityZoneIds]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PublicSubnet2

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZoneId: !Select [0, !Ref AvailabilityZoneIds]
      Tags:
        - Key: Name
          Value: PrivateSubnet1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZoneId: !Select [1, !Ref AvailabilityZoneIds]
      Tags:
        - Key: Name
          Value: PrivateSubnet2

  RouteTablePrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'Private Subnet RT'

  RouteTableAssociation1Private:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref RouteTablePrivate

  RouteTableAssociation2Private:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref RouteTablePrivate

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTablePrivate
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  RouteTablePublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'Public Subnet RT'

  RouteTableAssociation1Public:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTablePublic

  RouteTableAssociation2Public:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTablePublic

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

## VPC Endpoint Resources ##
  VPCEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Security group for VPC Endpoint'
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCCidr
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref VPCCidr

  VPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Join ['', ['com.amazonaws.vpce.', !Ref 'AWS::Region', '.', !Ref 'VPCEndpointServiceId']]
      VpcId: !Ref 'VPC'
      VpcEndpointType: 'Interface'
      SecurityGroupIds:
        - !Ref 'VPCEndpointSecurityGroup'
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

## EC2 Instance to connect to LLM Proxy
  EC2SSMRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              Service: 'ec2.amazonaws.com'
            Action: 'sts:AssumeRole'
      Path: '/'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore'

  # Instance Profile for EC2
  EC2InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: '/'
      Roles:
        - Ref: 'EC2SSMRole'

  ClientAppEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't2.micro'
      ImageId: !Ref LatestAmiID
      IamInstanceProfile: !Ref 'EC2InstanceProfile'
      SubnetId: !Ref PrivateSubnet1
      # NetworkInterfaces:
      #   - AssociatePublicIpAddress: true
      #     DeviceIndex: 0
      #     SubnetId: !Ref PublicSubnet1
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum install -y jq
          touch get_id_token.sh
          echo '#!/bin/bash

          # Prompt user for input
          read -p "Enter Cognito Client ID: " client_id
          read -p "Enter Username: " username
          read -sp "Enter Password: " password

          # Construct the curl command with user input
          id_token=$(curl --location "https://cognito-idp.us-east-1.amazonaws.com/" \
          --header "X-Amz-Target: AWSCognitoIdentityProviderService.InitiateAuth" \
          --header "Content-Type: application/x-amz-json-1.1" \
          --data-raw "{
              \"AuthFlow\": \"USER_PASSWORD_AUTH\",
              \"ClientId\": \"$client_id\",
              \"AuthParameters\": {
                  \"USERNAME\": \"$username\",
                  \"PASSWORD\": \"$password\"
              }
          }" | jq -r ".AuthenticationResult.IdToken")

          # Return the ID token
          echo $id_token' > get_id_token.sh
          chmod +x get_id_token.sh
      Tags:
        - Key: 'Name'
          Value: 'Client-App-Instance'

Outputs:
  CrossAccountRoleArn:
    Value: !GetAtt CrossAccountRole.Arn
    Description: The ARN of the cross-account role for use by LLM Proxy

  CrossAccountRoleName:
    Value: !Ref LLMProxyCrossAccountRoleName
    Description: The Name of the cross-account role for use by LLM Proxy

  VPCEndpointId:
    Description: 'ID of the VPC Endpoint'
    Value: !Ref 'VPCEndpoint'

  VPCEndpointDNSEntries:
    Description: 'DNS Entries for the VPC Endpoint'
    Value: !Join [',', !GetAtt 'VPCEndpoint.DnsEntries']

  AppEndpoint:
    Description: "Endpoint to Connect to LLM Proxy Application"
    Value: !Sub
      - 'http://${Endpoint}'
      - Endpoint: !Select [1, !Split [":", !Select [0, !GetAtt 'VPCEndpoint.DnsEntries']]]

  InstanceId:
    Description: 'Instance ID of the Client App Instance'
    Value: !Ref 'ClientAppEC2Instance'

  SSMSessionManagerURL:
    Description: Session Manager URL to connect to Client App EC2
    Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/${ClientAppEC2Instance}?region=${AWS::Region}"

  VpcId:
    Description: "ID of the VPC"
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VpcId"

  PrivateSubnet1Id:
    Description: "ID of Private Subnet 1"
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1Id"

  PrivateSubnet2Id:
    Description: "ID of Private Subnet 2"
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet2Id"

  VPCEndpointSecurityGroupId:
    Description: "ID of the VPC Endpoint Security Group"
    Value: !Ref VPCEndpointSecurityGroup
